<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/myCartTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/markpro"
        android:text="@string/my_cart"
        android:textColor="@color/purple_dark"
        android:textSize="35sp"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_checkout"
        app:layout_constraintTop_toBottomOf="@id/myCartTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="33dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/item_cart_card"
            app:layout_constraintBottom_toTopOf="@id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/line_cart"
            app:layout_constraintBottom_toTopOf="@id/totalTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/markpro"
            android:text="@string/price_6000"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textFontWeight="700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/totalTextView"
            tools:targetApi="p"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deliveryOptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/markpro"
            android:text="@string/free"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textFontWeight="700"
            app:layout_constraintBottom_toBottomOf="@id/deliveryTextView"
            app:layout_constraintStart_toStartOf="@id/totalPriceTextView"
            tools:targetApi="p"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/markpro"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textFontWeight="400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/deliveryTextView"
            tools:targetApi="p" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deliveryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="26dp"
            android:fontFamily="@font/markpro"
            android:textFontWeight="400"
            android:text="@string/delivery"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view1"
            tools:targetApi="p" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="27dp"
            android:background="@color/line_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/checkoutFrameLayout" />

        <FrameLayout
            android:id="@+id/checkoutFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/custom_button_checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:fontFamily="@font/markpro"
                android:text="@string/checkout"
                android:textFontWeight="700"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:targetApi="p"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>