<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="21dp"
    android:layout_marginBottom="11dp"
    android:background="@drawable/custom_hot_sales"
    android:backgroundTint="@color/black_hot_sales"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pictureImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/iphone12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newImageView"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_dashboard"
            android:text="@string/shop_new"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="p"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="18dp"
            android:text="@string/iphone_12"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newImageView"
            tools:targetApi="p"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/super_mega_rapido"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textFontWeight="400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            tools:targetApi="p"/>

        <FrameLayout
            android:id="@+id/buyNowFrameLayout"
            android:layout_width="98dp"
            android:layout_height="23dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/custom_button_buy_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitleTextView" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buy_now"
                android:fontFamily="sans-serif"
                android:textFontWeight="700"
                android:includeFontPadding="false"
                android:textAllCaps="false"
                android:textColor="@color/purple_dark"
                android:textSize="11sp"
                tools:targetApi="p"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>