<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_checkout"
    android:backgroundTint="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:visibility="invisible"
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="38dp"
        android:fontFamily="@font/markpro"
        android:text="@string/samsung_galaxy_s20_ultra"
        android:textColor="@color/purple_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/evaluationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:visibility="invisible"
        android:id="@+id/categoryTabLayout"
        style="@style/TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evaluationLinearLayout"
        app:tabIndicatorHeight="3dp"
        app:tabPaddingEnd="-1dp"
        app:tabPaddingStart="-1dp"
        app:tabTextAppearance="@style/TabTextStyle">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="shopTabItem"
            android:text="@string/shop_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="detailsTabItem"
            android:text="@string/details_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="featuresTabItem"
            android:text="@string/features_tab" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/infoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:visibility="invisible"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryTabLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_processor" />

            <TextView
                android:id="@+id/cpuTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/markpro"
                android:text="@string/exynos_990"
                android:textColor="@color/grey_light"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/cameraTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/markpro"
                android:text="@string/mp_108_12"
                android:textColor="@color/grey_light"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_disk" />

            <TextView
                android:id="@+id/ssdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/markpro"
                android:text="@string/gb_8_all_caps_true"
                android:textColor="@color/grey_light"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_disk" />

            <TextView
                android:id="@+id/sdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/markpro"
                android:text="@string/gb_256_all_caps_true"
                android:textColor="@color/grey_light"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/selectColorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/markpro"
        android:text="@string/select_color_and_capacity"
        android:textColor="@color/purple_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoLinearLayout" />

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/firstColorImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="27dp"
        app:cardCornerRadius="90dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/addToCardLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectColorTextView">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/firstCheckImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_check" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/secondColorImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="90dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/firstColorImageButton"
        app:layout_constraintStart_toEndOf="@+id/firstColorImageButton"
        app:layout_constraintTop_toTopOf="@+id/firstColorImageButton">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/secondCheckImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:src="@drawable/ic_check" />

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:visibility="invisible"
        android:id="@+id/bg128FrameLayout"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_checkout"
        app:layout_constraintBottom_toBottomOf="@+id/secondColorImageButton"
        app:layout_constraintEnd_toStartOf="@+id/bg256FrameLayout"
        app:layout_constraintTop_toTopOf="@+id/secondColorImageButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/markpro"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/gb_128_all_caps_true"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </FrameLayout>

    <FrameLayout
        android:visibility="invisible"
        android:id="@+id/bg256FrameLayout"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/custom_button_checkout"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bg128FrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg128FrameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/markpro"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/gb_256_all_caps_false"
            android:textAllCaps="false"
            android:textColor="@color/grey_light_8D"
            android:textSize="13sp"
            android:textStyle="bold" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:visibility="invisible"
        android:id="@+id/likeButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/custom_button_location"
        android:backgroundTint="@color/purple_dark"
        android:src="@drawable/ic_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/addToCardLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button_checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/markpro"
            android:includeFontPadding="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Add to Cart"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/markpro"
            android:layout_gravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="$1,500.00"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>